# ChangeLog for www-servers/publicfile
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/publicfile/ChangeLog,v 1.28 2013/12/25 20:37:23 jer Exp $

  25 Dec 2013; Jeroen Roovers <jer@gentoo.org> publicfile-0.52-r3.ebuild,
  publicfile-0.52-r4.ebuild:
  Drop HPPA keywording (bug #495974).

*publicfile-0.52-r4 (06 Jun 2013)

  06 Jun 2013; Robin H. Johnson <robbat2@gentoo.org> +publicfile-0.52-r4.ebuild:
  Bug #471398: nofiles group should be GID 200.

  01 Jan 2013; Julian Ospald <hasufell@gentoo.org> publicfile-0.52-r3.ebuild,
  +files/publicfile-0.52-build.patch:
  verbose build log wrt #430084 and respect AR/RANLIB

  01 Jan 2013; Ulrich Müller <ulm@gentoo.org> publicfile-0.52-r3.ebuild:
  Fix LICENSE, add mirror and bindist restrictions, bug 444424.

  09 Sep 2012; Michael Palimaka <kensington@gentoo.org>
  -publicfile-0.52-r1.ebuild:
  Remove old.

  09 Sep 2012; Raúl Porcel <armin76@gentoo.org> publicfile-0.52-r1.ebuild,
  publicfile-0.52-r3.ebuild:
  Drop sparc keywords

  20 Aug 2012; Johannes Huber <johu@gentoo.org> publicfile-0.52-r3.ebuild:
  Stable for x86, wrt bug #428824

  06 Aug 2012; Anthony G. Basile <blueness@gentoo.org>
  publicfile-0.52-r3.ebuild:
  Stable ppc, bug #428824

  05 Aug 2012; Agostino Sarubbo <ago@gentoo.org> publicfile-0.52-r3.ebuild:
  Stable for amd64, wrt bug #428824

  04 Aug 2012; Jeroen Roovers <jer@gentoo.org> publicfile-0.52-r3.ebuild:
  Stable for HPPA (bug #428824).

  04 Aug 2012; Jeroen Roovers <jer@gentoo.org> publicfile-0.52-r3.ebuild:
  Do not install pointless build files as docs. Inherit user.

  03 Aug 2012; Michael Palimaka <kensington@gentoo.org>
  publicfile-0.52-r3.ebuild:
  Fix launch script wrt bug #429528. Tidy ebuild.

*publicfile-0.52-r3 (24 Mar 2012)

  24 Mar 2012; Pacho Ramos <pacho@gentoo.org> +publicfile-0.52-r3.ebuild,
  -publicfile-0.52-r2.ebuild:
  Rename files to prevent collisions, bug #248485. Drop old.
