@@ -6,13 +6,13 @@ DIST ftp-ls-patch 3280 SHA256 801c44bb6f92dbfb6b6943337c2fb02e3ee2419b0e8514e265
 DIST publicfile-0.52-filetype-diff 1101 SHA256 451f70a2817943b5be0a09941cab9f2473991933097bc21ceb368d68ada414b6 SHA512 63139c1fd2408a766dbbd7e31e89e1cacab54a93243814ba562c3d2d12a5ac2841d612fcb2979540a70f62618be1232c7e945ef41a64af7760dc1b57e0818242 WHIRLPOOL b0ad0654bd3d2afb773f1f5c66c5ceb075827f17aa302c9ddf78af8fbffd12e47d32d987fc2adac53dd54b9e243d0e8cf148dcc2798347f4db09d1c8cc3835ab
 DIST publicfile-0.52.tar.gz 34892 SHA256 3f9fcf737bfe48910812cc357a31bf1f2e3da2490dbd175ce535830f251c08ef SHA512 f0de968d271b0631362d4175e25d2b0901bf125262cb4dcde8ba246eea0d0fcf54460e834413ac4a2bd93cd4009a1dedc4598a8e763e5a2b781b5ae7a26ff86e WHIRLPOOL ba4d92dc8866a0b94e022b2e100afbd9ed548a285bba5cfda4e2717957b9e63eb75ee6054f1a866473daf0b8979080d269578924a4e49db0068ed43721431440
 EBUILD publicfile-0.52-r3.ebuild 2249 SHA256 fc4c0a1a4916a3afe89db7bf9f4ff4776a85c4ebd0547f72110172f7f107ea2b SHA512 5feb89eabe6dab4188d35a727f84588e0033873b9eacde4555ed9b90e7acb9409aeb55be5ed8b9bcc4019e45cd2bfa7907c06aa58e49dd12b306c461c159334d WHIRLPOOL 6372b2a6fe74e378914aaf4f212772f0aa58d062488becf92dd62ba2d25fd6afbf225ecc44d074ba383da60e5a6e3f7a7c89bcd52c6ad95665126177b67c60c7
-EBUILD publicfile-0.52-r4.ebuild 2615 SHA256 50a3122f26a7519087e693d0136c5ac365c7abc9d30a5564da69e1e1c5e66190 SHA512 f26c8df63d671c19c3fbff2cecd632941d2ffbf11ce5624136853ac8114d0fe3798e020f558ff18a5afd6f2e6754db478fcdeb6beb3c1a0345013cb83a3cd0bb WHIRLPOOL 667fb5f6eca6a8840959fc2ccdf27355d2d35d1c667f4049e9feff3acf4e3fd894a76c276c9f019b4d9f1aaaf777fd3e30a58f1a279658c269a884231d927de2
-MISC ChangeLog 5367 SHA256 5f4f65de0bf2c1a27840610586f55ea1f9bc498de5d7028d5da93b3ac0a064e6 SHA512 593bb3b0d017cff64ef91031da97c825b53508af1fdf333372c9206fe8471991c4dc31f6e89f47a4563e872c64bdc323041f89d9f258ae84f526529c9de635a2 WHIRLPOOL a0cbfa5225fb8b5c45921ac0dbf85b45f549716eafe5c4b188cf09ebb362058ed15a3251da3f4708b35144661009bbe8230ebaeecf3da90a1f1b684e6acc0487
+EBUILD publicfile-0.52-r4.ebuild 2616 SHA256 4901ddd61807415520f6d63d567119285dfd12ea0e36052ee43914b3cddb0d6c SHA512 d0a3cdef23ad991317980d76191d3f1e071b3c6c164e03647ef9554265f08b08496de140348bfc309acbc7f1cdee634b5de3086f3bc64daccc57f774e02a001e WHIRLPOOL bffe79c1433df11a9d8340aa2b3597395ec47982f4d9d1d073a02803d60fda6b1f95fbafeccf3d4ba07af25bde6f43655beb7830f2c232b0def616301910416b
+MISC ChangeLog 5471 SHA256 2a4e02d21dd169a128673a2033f2c10f2c852f2cf5f0a7d533233515d17b2ef3 SHA512 8677baac484783e61de19799ccac201e03b6677ebd7c5c4730c9f1301da9a55cc2faa304152753f429642ca3c45657fd375942836ad4b8643d235a6d0920b9cb WHIRLPOOL a68d9b466b75725a46edb18e43a0a92178c8d2418f56d7dfcdd52a6d3c8027b1f20831800d6eacfbaea63be4bafa584c351d6d686495c700fb044d39d761efd5
 MISC metadata.xml 211 SHA256 84ff2341253cdd21a6782e14ebc076a8bcae11428aacfe2454f4b32165504727 SHA512 a9385b7dc02a9537080a9b1bf59ae2caacd84cab2e3ef1fee15e4f10d5518ae9f71e4ce07d99104e643d18a79ca05116d74e97ec7d230d21b340656701547078 WHIRLPOOL 4309ff085fbfd1a91434c0a9dd4c23b7ad8b10b0559beedcb4d911745543745691abe91bb1e361dd88b6383678f020c95deb9359876319a6407ac0ef2dcbd221
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlK7QgQACgkQVWmRsqeSphPCHACfVgj13+TPPgFAv0OKtUImKulH
-jpQAnjKanP9h4cdoPKcqRe3EbcKsgSBk
-=8kcv
+iEYEAREIAAYFAlLS9lIACgkQCaWpQKGI+9TDZwCfd9aRkDIU7YzXbgAv4HuO/soZ
+lZgAmwbVUttqAqy24DTqB8iRnQQtQcDR
+=sYg0
 -----END PGP SIGNATURE-----
