@@ -1,6 +1,9 @@
 # ChangeLog for www-servers/publicfile
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-servers/publicfile/ChangeLog,v 1.28 2013/12/25 20:37:23 jer Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/www-servers/publicfile/ChangeLog,v 1.29 2014/01/12 20:08:49 pacho Exp $
+
+  12 Jan 2014; Pacho Ramos <pacho@gentoo.org> publicfile-0.52-r4.ebuild:
+  amd64 stable, bug #495974
 
   25 Dec 2013; Jeroen Roovers <jer@gentoo.org> publicfile-0.52-r3.ebuild,
   publicfile-0.52-r4.ebuild:
